# axman6.com

./: .gitignore  404.md  Haskell-notes.md  about.md  axman6-com-hakyll.cabal  contact.md  index.html  keybase.txt  new-post  site.hs  sync
app/: Main.hs
css/: custom.css  default.css  ie8.css  main.css
darcs/AVar/: Testing.hs
darcs/AVar/Data/: AVar.hs
darcs/AVar/Data/AVar/: Internal.hs  Unsafe.hs
darcs/AVar/_darcs/: hashed_inventory  tentative_pristine
darcs/AVar/_darcs/inventories/: 0000000571-2a8ca2d455f373dbf44d484e87541f9c175f4ced339fec8165c6e62d813256b5  0000001035-44017691e45e197056f0f2a8617366685505313d1f20fbf3874c9be6d4ea000e
darcs/AVar/_darcs/patches/: 0000000305-9dc2aa7b2832adc96421e4104c8b2136792f247cc76b264c6afc58ac94ef0a76  0000000771-b408ae1abd6a321626a7548336ccac417f9546d4684ace4d8833e0a489e64721  0000001127-031791baa9670cbebcdfc6664053e46a72de668be78b263715192c56c9c58f37  0000001590-d02f71e99fce52d205098891e2d5edb0aaf4105bf4590b99e91e7009ccc99cc1  0000005671-17781b67d68ecd78cfc60ff18d25f9b230babc7fc6b4753e672ef71649610508  0000006197-566858cb117f72dd085aee3595cace5a0e29cb1cad9c04feae7fe6311fea2211  0000006317-3504fb80807a5672f0faab0f1efdc3cdde5e82bb1bb6f23c92e4c5822f2df566  0000007168-c925ffbb3c7553060ccbd612821132467853f047d75ef40564782f3a5c451835
darcs/AVar/_darcs/pristine.hashed/: 0000000182-6d1e5e542db85662e33b51df8f40b9911483d8f290ad857fe70342639ab3b4a7  0000000186-0f58ac80409152ca00aa566b6a56eade5c7ada25add81ce7cb0e393dd403970c  0000000370-d4684fe3f1618fda75b4bc7680b9598f63f2307d7d6b358315aab3b0a03092e1  0000000910-471b96954770e0dd18846883eafc5c765f1c89167a1d3cd65069d4c115ad45a7  0000001285-05ab97e37e01b01c4c75976ac21755cd29a582f5eaeb1a41d278b9c83cb5ebc3  0000002865-2b8ae57d8709c95ba99eceb1aedcd5ac34fc288e166c81e5374912fec17087f7  0000003559-45474992ea58fa29be55cbf9e7990a66977b12dfdf5475cdd686d785be673ca9  0000003831-bf4dbf5e781a4c5ac7535d76dbdb23ca624c50d9657e57a807d61f09bd44973b
darcs/FastMap/: .darcs-record-0.swp  FastMap.cabal  darcs-record-0
darcs/FastMap/Data/Map/: FastMap.hs  FastMap2.hs
darcs/FastMap/Data/Map/FastMap/: MapKey.hs
darcs/Phroxy/: Main.hs  push
darcs/Phroxy/Network/Proxy/: Tracker.hs
darcs/Phroxy/_darcs/: hashed_inventory  tentative_pristine
darcs/Phroxy/_darcs/inventories/: 0000000181-e27db7a65eee80d7830126c3e450ce6fab61d84e4a5729558bbd63237ec7005f  (+2 more)
darcs/RemoteSend/: RemoteSend.hs
darcs/RemoteSend/_darcs/: hashed_inventory  tentative_pristine
darcs/TernaryTrees/: TestSSet.hs  shuffled.lst
darcs/TernaryTrees/_darcs/: hashed_inventory  tentative_pristine
images/: index.html
js/: main.js
posts/: 2015-08-23-example.markdown  2016-07-10-Linear-resources-in-haskell.md  2016-12-24-Announcing-amazonka-s3-streaming-0.1.md  2017-12-18-Thoughts-on-the-design-of-Digital-Elections.md
sass/: main.scss
src/: Lib.hs
static/: index.html
templates/: archive.html  default.html  post-list.html  post-preview.html  post.html
(+65 files in other folders)
