name:                axman6-com-hakyll
version:             0.1.0.0
synopsis:            Hakyll project template from stack
description:         Please see README.md
homepage:            https://github.com/Axman6/axman6-com#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Mason
maintainer:          axman6@gmail.com
copyright:           Alex Mason 2016
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.22

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , warp-tls
                     , wai-extra
                     , wai-app-static
  default-language:    Haskell2010

executable serve
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , axman6-com-hakyll
  default-language:    Haskell2010

executable site
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       hakyll == 4.8.*

test-suite axman6-com-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , axman6-com
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Axman6/axman6-com
